Updated the buttons and CSS to align correctly and be bigger.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -62,6 +62,7 @@
         list-style:none;
         margin:0;
         padding:0;
+        height: 24px;
     }
     #header ul li a {
         display:block;
@@ -75,6 +76,7 @@
         position:relative;
         left:15px;
         line-height:1.3em;
+        font-size: 30px;
     }
     #header ul li a:hover {
         background:#369;
